# sqlx-tracing

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
opentelemetry-testing/: Cargo.toml
opentelemetry-testing/asset/: otelcol-config.yml
opentelemetry-testing/src/: lib.rs
src/: connection.rs  error.rs  lib.rs  macros.rs  pool.rs  postgres.rs  prelude.rs  span.rs  sqlite.rs  transaction.rs
tests/: common.rs  mysql.rs  postgres.rs  sqlite.rs
