[package]
name = "opentelemetry-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
opentelemetry = "0.30"
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-appender-tracing = { version = "0.30", features = [
    "experimental_metadata_attributes",
    "experimental_use_tracing_span_context",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = { version = "3.2" }
tempfile = "3.21"
testcontainers = "0.25"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-opentelemetry = "0.31"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
